@@ -6,9 +6,10 @@
 <%args>
 $new_category_autocomplete => "/"
 $site_id => undef
+$key => 'story'
 </%args>
 <%init>
-my $story = get_state_data('story_prof', 'story');
+my $asset = get_state_data("$key\_prof", $key);
 
 (my $parent_cat_uri = $new_category_autocomplete) =~ s|/[^/]*$|/|; # strip off the incomplete directory on the end
 
@@ -17,16 +18,16 @@ my @categories;
 if ( FULL_SEARCH ) {
     @categories = Bric::Biz::Category->list({
         uri => "%" . $new_category_autocomplete . "%",
-        site_id => $site_id || $story->get_site_id,
+        site_id => $site_id || $asset->get_site_id,
     });
 } else {
     ( my $parent_cat ) = Bric::Biz::Category->list({
         uri => $parent_cat_uri,
-        site_id => $site_id || $story->get_site_id,
+        site_id => $site_id || $asset->get_site_id,
     });
     @categories = Bric::Biz::Category->list({
         uri => $new_category_autocomplete . "%",
-        site_id => $site_id || $story->get_site_id,
+        site_id => $site_id || $asset->get_site_id,
         parent_id => (defined $parent_cat ? $parent_cat->get_id : 0)
     });
     # Show the parent if that's exactly what was typed
